--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.4"
   }
 }
