--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,15 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.4"
+    "fs": "0.0.1-security",
+    "mongoose": "^8.19.4",
+    "node-cron": "^4.2.1",
+    "path": "^0.12.7",
+    "pdf-parse": "^2.4.5",
+    "puppeteer": "^24.30.0"
   }
 }
