--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ OPENROUTER_API_KEY=sk-or-v1-8efcda6e438e29f6611cf634536c539f065bc021b2acf0ac90f8
 PORT=5000
 HUGGINGFACE_API_KEY=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
 MONGO_URI=mongodb+srv://ogalomercy8_db_user:UT5ss5pICmJAI7qg@cluster0.agf6pzj.mongodb.net/
-
+GEMINI_API_KEY=AIzaSyBqLb864EiHfJ6mxSTFBPpB1lYHL8RZB7Q
 
