--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
@@ -21,5 +22,6 @@
     "path": "^0.12.7",
     "pdf-parse": "^2.4.5",
     "puppeteer": "^24.30.0"
-  }
+  },
+  "type": "commonjs"
 }
