--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,5 +81,10 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
-  }
+  },
+  "description": "**URL**: https://lovable.dev/projects/342ee703-85d6-48e6-9e46-a65da16bc101",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
