--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,9 @@
     "path": "^0.12.7",
     "pdf-parse": "^2.4.5",
     "puppeteer": "^24.30.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   },
   "type": "commonjs"
 }
