--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "fs": "0.0.1-security",
+    "gtts": "^0.2.1",
     "mongoose": "^8.19.4",
     "node-cron": "^4.2.1",
     "path": "^0.12.7",
