--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "fs": "0.0.1-security",
     "gtts": "^0.2.1",
     "mongoose": "^8.19.4",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "path": "^0.12.7",
     "pdf-parse": "^2.4.5",
