--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ PORT=5000
 HUGGINGFACE_API_KEY=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
 MONGO_URI=mongodb+srv://ogalomercy8_db_user:UT5ss5pICmJAI7qg@cluster0.agf6pzj.mongodb.net/
 GEMINI_API_KEY=AIzaSyBqLb864EiHfJ6mxSTFBPpB1lYHL8RZB7Q
+TIKTOK_CLIENT_ID=awh1hvqtdnhovw3a
+TIKTOK_CLIENT_SECRET=8czwtNGJEyLLfevb4pRZGFsGwtjWiW8Y
+TIKTOK_REDIRECT_URI=http://localhost:5000/api/tiktok/callback
